tests/init_state/partial_init/partial_init_use.err.expected
error: at 29:5: [SUB-CopyOfNonCopy] In function 'copy_whole_while_partial', block 'entry': cannot copy non-Copy type P
    |
 28 |     p.x = 1;
 29 |     q = copy p;
    |     ^^^^^^^^^^
 30 |     return
    |
  hint: since the type is not Copy, try moving it instead using 'move'
