tests/init_state/partial_init/partial_init_use.sim
# Uses that surface partial-init violations.
#
# Reading, moving, or copying an aggregate that hasn't reached Init
# fires an `INIT-*` diagnostic naming the offending place. Every
# function exercises one cell of the (container x partial cause x
# access pattern) matrix — a regression pins the wrong error kind,
# wrong span, or lets a partial read through.

struct P { x: i64  y: i64 }

struct Q: Copy + Drop { x: i64  y: i64 }

struct Inner { a: i64  b: i64 }

struct Outer { i: Inner  c: i64 }

struct<T: Copy + Drop> Pair: Copy + Drop { a: T  b: T }

# ---------- Whole-value read while Partial ----------

# Linear struct: `copy p` fires SUB-CopyOfNonCopy (P is not Copy) and
# INIT-UsePartiallyInit (only `p.x` reached Init) — both at the same
# statement span.
fn copy_whole_while_partial() {
  p: P;
  q: P;
  entry:
    p.x = 1;
    q = copy p;
    return
}

# ---------- Read of a Partial subfield ----------

# `p.y` never reaches Init even though `p.x` does. The read at
# `p.y` fires UseBeforeInit — narrower than UsePartiallyInit
# because the specific subfield is uninitialized.
fn read_never_init_field() {
  p: Q;
  a: i64;
  entry:
    p.x = 1;
    a = copy p.y;
    return
}

# ---------- Read of a moved-out subfield ----------

# `p.x` moves out; the re-read fires UseAfterMove (distinct from
# UseBeforeInit — the subfield transitioned through Init).
fn read_moved_field(p: Q) {
  a: i64;
  b: i64;
  entry:
    a = move p.x;
    b = copy p.x;
    return
}

# ---------- Nested: read of a Partial inner leaf ----------

# `o.i.a` is Init, `o.i.b` is NeverInit → `o.i` is Partial.
# Reading `o.i.b` fires UseBeforeInit.
fn nested_read_uninit_leaf() {
  o: Outer;
  n: i64;
  entry:
    o.i.a = 1;
    o.c = 3;
    n = copy o.i.b;
    return
}

# ---------- Array: read of an uninit slot at constant index ----------

fn array_read_uninit_slot() {
  a: [i64; 3];
  b: i64;
  entry:
    a[0] = 1;
    b = copy a[1];
    return
}

# ---------- Array: whole-value read while slots are Partial ----------

fn array_read_whole_while_partial() {
  a: [i64; 3];
  b: [i64; 3];
  entry:
    a[0] = 1;
    b = copy a;
    return
}

# ---------- Loop-carried Partial: joins to Partial at loop exit ----------

# `entry` writes `p.x`. `init_y` also writes `p.y`. If `cond` is
# false on first entry, `p.y` never reaches Init — the join at
# `exit` yields `Partial{x: Init, y: NeverInit-or-Init}`, so the
# whole-value read there fires UsePartiallyInit.
fn loop_carried_partial(cond: bool) {
  p: Q;
  a: Q;
  entry:
    p.x = 10i64;
    goto loop_hdr
  loop_hdr:
    branch(copy cond) [true: init_y, false: exit]
  init_y:
    p.y = 20i64;
    goto loop_hdr
  exit:
    a = copy p;
    return
}

# ---------- Generic: read of an uninit Param-typed field ----------

# `p.b: T` is NeverInit. Reading it fires UseBeforeInit — proof that
# per-field tracking works when the field's type is a Param.
fn<T: Copy + Drop> pair_read_uninit_param_field(a: T) {
  p: Pair<T>;
  x: T;
  entry:
    p.a = move a;
    x = copy p.b;
    return
}
